# EventHorizon

./: .gitignore  README.md  pyproject.toml
src/EventHorizon/: __init__.py  event.py  func.py
tests/Events/: callback.py  test.py
tests/Functions/: function.py  test.py
