[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-horizon"
version = "0.1.0"
authors = [
  { name="Hero3806", email="sussymanxdxd@gmail.com" }
]
description = "A python library that adds events to communicate through other files."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]